--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "km-lan": {
+    "km-lab": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/km-lan",
+            "outputPath": "dist/km-lab",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -67,10 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "km-lan:build:production"
+              "buildTarget": "km-lab:build:production"
             },
             "development": {
-              "buildTarget": "km-lan:build:development"
+              "buildTarget": "km-lab:build:development"
             }
           },
           "defaultConfiguration": "development"
